<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">

  <name>CROSS</name>
  <description>CAD and ROS, Open-Source Synergy. Workbench to create or visualize robot description files (URDF and xacro) from FreeCAD.</description>
  <version>1.0.0</version>
  <date>2024-11-07</date>
  <maintainer email="galou_breizh@yahoo.fr">Gaël Écorchard</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="main">https://github.com/galou/freecad.cross.git</url>
  <url type="readme">https://github.com/galou/freecad.cross/blob/main/README.md</url>
  <icon>resources/icons/cross.svg</icon>

  <freecadmin>0.21.2</freecadmin>

  <!-- https://https://github.com/stack-of-tasks/pinocchio.
  According to pypi.org, can be installed with `conda install -c conda-forge pinocchio` or `pip install pin`.
  However, it didn't work on Gaël's setup and was installed from robotpkg. `sys.path` is modified by code to
  include the path to this library in /opt/robotpkg/....
  -->
  <!--<depend>pin</depend>-->

  <content>
    <workbench>
      <classname>CrossWorkbench</classname>
	  <subdirectory>freecad/cross</subdirectory>
	  <pythonmin>3.8</pythonmin>
    </workbench>
  </content>

</package>
