<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freecad_cross_rosdep</name>
  <version>1.0.0</version>
  <description>Package for store freecad.cross workbench dependencies</description>
  <maintainer email="no_maintainer@no.maintaner">no</maintainer>
  <license>LGPL-2.1</license>

  <depend>xacro</depend>
  <depend>urdfdom_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
